# Robotic_Arm

config/: controller.yaml  joint_trajectory_controller.yaml
launch/: controller.launch  display.launch  gazebo.launch  joint_trajectory_control.launch  urdf.rviz
meshes/: MG996R_v5_1.stl  MG996R_v5__1__1.stl  MG996R_v5__2__1.stl  MG996R_v5__4__1.stl  link_2_1.stl  link_3_1.stl  link_4__1__1.stl  servo_motor_mount_v2__1__1.stl
robotic_arm_6dof/: CMakeLists.txt  package.xml
robotic_arm_6dof/config/: fake_controllers.yaml  gazebo_robotic_arm_v3.urdf  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  robotic_arm_v3.srdf  ros_controllers.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
robotic_arm_6dof/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  move_group_python.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  robot_model_and_state.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
robotic_arm_6dof/script/: move_group_python_interface.py  planning_scene.cpp  robot_keyboard_control.py  robot_model_and _states.cpp
robotic_arm_v3_description/: CMakeLists.txt  package.xml
robotic_arm_v3_description/launch/: controller.launch  controller.yaml  display.launch  (+1 more)
urdf/: robotic_arm_v3.gazebo  robotic_arm_v3.trans  robotic_arm_v3.xacro
(+15 files in other folders)
